<resources>
        <string name="app_info_appName">Passtable</string>
        <string name="app_info_changePasswordTitle">Change password</string>
        <string name="app_info_changePasswordSteps">&lt;b>Steps:&lt;/b>&lt;br>
                1. Unlock the file using biometric authentication;&lt;br>
                2. On the data screen, click on the three dots in the upper right corner;&lt;br>
                3. Select \"Save as\";&lt;br>
                4. In the window that appears, click the \"Select folder\" button;&lt;br>
                5. Choose the folder to save the copy of the current file;&lt;br>
                6. In the next window, enter a new primary password;&lt;br>
                7. Click the \"Save\" button.&lt;br>
                &lt;br>
                After clicking the \"Save\" button, a new file with a new primary password will be used. In the future, always use only this file.
                &lt;br>&lt;br>
                &lt;b>It is necessary to remember that the primary password is the key to your data!&lt;/b>&lt;br>
                If the device is changed or the biometric sensor is damaged, access to the data will be impossible without entering this password. Biometric authentication is only an additional way of logging in, not the main one.&lt;br>
                &lt;b>It is impossible to recover encrypted data without the primary password!&lt;/b>
                &lt;br>&lt;br>
                This instruction can be opened at any time: Settings → Biometric authentication → Forgot password?</string>
        <string name="app_info_disablePasswordReminders">You can disable reminders to enter Primary Password in Settings.</string>
        <string name="app_info_itemMenu">Click on the Eye button to show the password.\n\nClick on the item itself to show the menu for working with it.</string>
        <string name="app_info_keyboardShortcuts">Ctrl+N — Add item.\nCtrl+F — Search by notes and usernames.\n\nSettings → Help → Keyboard shortcuts</string>
        <string name="app_info_keyboardShortcutsHelp">&lt;b>Ctrl+N&lt;/b> — Add item.&lt;br>&lt;br>&lt;b>Ctrl+F&lt;/b> — Search by notes and usernames.&lt;br>&lt;br>&lt;b>Ctrl+1&lt;/b> — Search by red tag.&lt;br>&lt;br>&lt;b>Ctrl+2&lt;/b> — Search by green tag.&lt;br>&lt;br>&lt;b>Ctrl+3&lt;/b> — Search by blue tag.&lt;br>&lt;br>&lt;b>Ctrl+4&lt;/b> — Search by yellow tag.&lt;br>&lt;br>&lt;b>Ctrl+5&lt;/b> — Search by purple tag.&lt;br>&lt;br>&lt;b>Ctrl+0&lt;/b> — Cancel search by tags.</string>
        <string name="app_info_license">Licensed under the Apache License, Version 2.0.\n\nSettings → About → License</string>
        <string name="app_info_pinToScreen">Pin the item to the screen to access it from any app.</string>
        <string name="app_info_repo">https://github.com/Ladsers/Passtable-Android</string>
        <string name="app_info_thirdPartyResources">Cryptographic algorithms&lt;br>&lt;big>&lt;b>Bouncy Castle&lt;/b>&lt;/big>&lt;br>Legion of the Bouncy Castle Inc.&lt;br>MIT License&lt;br>https://bouncycastle.org&lt;br>&lt;br>
            Icons&lt;br>&lt;big>&lt;b>Material Design icons&lt;/b>&lt;/big>&lt;br>Google LLC&lt;br>Apache License 2.0&lt;br>https://fonts.google.com/icons&lt;br>&lt;br>
            Font&lt;br>&lt;big>&lt;b>Manrope&lt;/b>&lt;/big>&lt;br>Mikhail Sharanda&lt;br>SIL Open Font License&lt;br>https://manropefont.com&lt;br>&lt;br>
            Font&lt;br>&lt;big>&lt;b>IBM Plex Sans&lt;/b>&lt;/big>&lt;br>IBM Corp., Mike Abbink, Bold Monday&lt;br>SIL Open Font License&lt;br>https://www.ibm.com/plex&lt;br>&lt;br>
            Font&lt;br>&lt;big>&lt;b>Overpass Mono&lt;/b>&lt;/big>&lt;br>Delve Withrington, Dave Bailey, Thomas Jockin&lt;br>SIL Open Font License&lt;br>https://overpassfont.org&lt;br></string>
        <string name="app_info_webPage">https://www.ladsers.com/passtable</string>
        <string name="app_com_confirm">Confirm</string>
        <string name="app_com_fileExtension" translatable="false">.passtable</string>
        <string name="app_com_fileLabel">Passtable File</string>
        <string name="app_com_note">Note</string>
        <string name="app_com_password">Password</string>
        <string name="app_com_spaceChar">space</string>
        <string name="app_com_tag">Tag</string>
        <string name="app_com_username">Username</string>
        <string name="app_bt_about">About</string>
        <string name="app_bt_addItem">Add item</string>
        <string name="app_bt_appForPc">App for PC</string>
        <string name="app_bt_cancel">Cancel</string>
        <string name="app_bt_clear">Clear</string>
        <string name="app_bt_clearRecentFiles">Clear list of recent files</string>
        <string name="app_bt_close">Close</string>
        <string name="app_bt_closeFile">Close file</string>
        <string name="app_bt_copy">Copy</string>
        <string name="app_bt_copyNote">Copy note</string>
        <string name="app_bt_copyPassword">Copy password</string>
        <string name="app_bt_copyUsername">Copy username</string>
        <string name="app_bt_create">Create</string>
        <string name="app_bt_createNewFile">Create new file</string>
        <string name="app_bt_delete">Delete</string>
        <string name="app_bt_disable">Disable</string>
        <string name="app_bt_disableBiometricForAll">Disable biometric authentication for all files</string>
        <string name="app_bt_disableBiometricForOne">Disable biometric authentication</string>
        <string name="app_bt_done">Done</string>
        <string name="app_bt_dontShowAgain">Don\'t show again</string>
        <string name="app_bt_download">Download</string>
        <string name="app_bt_edit">Edit</string>
        <string name="app_bt_enter">Enter</string>
        <string name="app_bt_enterPassword">Enter password</string>
        <string name="app_bt_forgotPassword">Forgot password?</string>
        <string name="app_bt_githubRepo">GitHub repo</string>
        <string name="app_bt_goToSettings">Go to settings</string>
        <string name="app_bt_ignoreAndCloseFile">Ignore and close file</string>
        <string name="app_bt_keyboardShortcuts">Keyboard shortcuts</string>
        <string name="app_bt_license">License</string>
        <string name="app_bt_moveToTop">Move to top</string>
        <string name="app_bt_ok">OK</string>
        <string name="app_bt_open">Open</string>
        <string name="app_bt_openRuStore">Open RuStore</string>
        <string name="app_bt_passwordGenerator">Password generator</string>
        <string name="app_bt_pinToScreen">Pin to screen</string>
        <string name="app_bt_rateApp">Rate app</string>
        <string name="app_bt_removeFromList">Remove from list</string>
        <string name="app_bt_restore">Restore</string>
        <string name="app_bt_save">Save</string>
        <string name="app_bt_saveAs">Save as</string>
        <string name="app_bt_saveWithCurrentPassword">Save with current password</string>
        <string name="app_bt_selectFolder">Select folder</string>
        <string name="app_bt_sendFeedback">Send feedback</string>
        <string name="app_bt_settings">Settings</string>
        <string name="app_bt_share">Share</string>
        <string name="app_bt_showNote">Show note</string>
        <string name="app_bt_showPassword">Show password</string>
        <string name="app_bt_showUsername">Show username</string>
        <string name="app_bt_skip">Skip</string>
        <string name="app_bt_supportDeveloper">Support developer</string>
        <string name="app_bt_thirdPartyResources">Third party resources</string>
        <string name="app_bt_tools">Tools</string>
        <string name="app_bt_tryEditLastItem">Try to edit last item</string>
        <string name="app_bt_undoLastAction">Undo last action</string>
        <string name="app_bt_updateAvailable">Update available</string>
        <string name="app_bt_webPage">Web page</string>
        <string name="ui_ct_about">About</string>
        <string name="ui_ct_addItem">Add item</string>
        <string name="ui_ct_basicSet">Basic set: %1$s</string>
        <string name="ui_ct_biometricAuthentication">Biometric authentication</string>
        <string name="ui_ct_biometricCheckboxByDefault">The checkbox \"Biometric authentication\" is checked by default in the primary password entry window</string>
        <string name="ui_ct_capitalLetters">Capital letters</string>
        <string name="ui_ct_createdBy">Created by Max Korolev</string>
        <string name="ui_ct_dark">Dark</string>
        <string name="ui_ct_dataInvalidChars">Some data contains invalid characters</string>
        <string name="ui_ct_doNotLock">Do not lock</string>
        <string name="ui_ct_editItem">Edit item</string>
        <string name="ui_ct_error">Error</string>
        <string name="ui_ct_exclude">Exclude</string>
        <string name="ui_ct_fileNoItems">File contains no items</string>
        <string name="ui_ct_fullSet">Full set</string>
        <string name="ui_ct_home">Home</string>
        <string name="ui_ct_itemMustContain">Item must contain note or username with password</string>
        <string name="ui_ct_leaveBlankToSkip">Leave blank to skip verification</string>
        <string name="ui_ct_light">Light</string>
        <string name="ui_ct_lockFile">Lock the file</string>
        <string name="ui_ct_lockMinOrLockPhone">When minimizing the app or locking the phone</string>
        <string name="ui_ct_lockTimePeriod">When the specified time period after minimizing the app expires</string>
        <string name="ui_ct_lockWhenEditing">Lock when editing or creating items</string>
        <string name="ui_ct_lowercaseLetters">Lowercase letters</string>
        <string name="ui_ct_minimumNumber">Minimum number</string>
        <string name="ui_ct_noCharSetsGeneration">There are no character sets available for generation</string>
        <string name="ui_ct_noRecentlyOpenedFiles">No recently opened files</string>
        <string name="ui_ct_nothingFound">Nothing found</string>
        <string name="ui_ct_numbers">Numbers</string>
        <string name="ui_ct_openOrCreateFile">Open an existing file or create a new one</string>
        <string name="ui_ct_passwordGenerator">Password generator</string>
        <string name="ui_ct_passwordLength">Password length</string>
        <string name="ui_ct_passwordsDoNotMatch">Passwords don\'t match</string>
        <string name="ui_ct_plusToAddNew">Click on \"+\" in the top right corner to add a new item</string>
        <string name="ui_ct_preventScreenCapture">Prevent screen capture</string>
        <string name="ui_ct_recentFiles">Recent files</string>
        <string name="ui_ct_rememberRecentFiles">Remember recently opened files</string>
        <string name="ui_ct_remindPrimaryPassword">Periodically remind you to enter Primary Password</string>
        <string name="ui_ct_searchByNotesUsernames">Search by notes and usernames</string>
        <string name="ui_ct_security">Security</string>
        <string name="ui_ct_settings">Settings</string>
        <string name="ui_ct_sumMinNumberExceedsPassLength">The sum of the minimum number of characters exceeds the password length</string>
        <string name="ui_ct_symbols">Symbols</string>
        <string name="ui_ct_systemDefault">System default</string>
        <string name="ui_ct_theme">Theme</string>
        <string name="ui_ct_timePeriodInSecs">Time period in seconds</string>
        <string name="ui_ct_tooManyCharsExcluded">It is not possible to generate password with the specified parameters: too many characters were excluded</string>
        <string name="ui_ct_version">Version</string>
        <string name="ui_ct_webResources">Web resources</string>
        <string name="ui_msg_biometricEnabled">Biometric authentication is enabled for this file</string>
        <string name="ui_msg_biometricNotAvailable">Biometric authentication is not available at the moment. Please enter password.</string>
</resources>