<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btUpdate"
        android:enabled="false"
        android:icon="@drawable/ic_update"
        android:title="@string/app_bt_updateAvailable"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/btTools"
        android:icon="@drawable/ic_tools"
        android:title="@string/app_bt_tools"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/btPasswordGenerator"
                android:title="@string/app_bt_passwordGenerator"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/btSettings"
        android:title="@string/app_bt_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/btKeyboardShortcuts"
        android:title="@string/app_bt_keyboardShortcuts"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/btAppForPc"
        android:title="@string/app_bt_appForPc"
        app:showAsAction="never" />

    <item
        android:id="@+id/btRateApp"
        android:title="@string/app_bt_rateApp"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/btSupportDeveloper"
        android:title="@string/app_bt_supportDeveloper"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/btSendFeedback"
        android:title="@string/app_bt_sendFeedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/btAbout"
        android:title="@string/app_bt_about"
        app:showAsAction="never" />

</menu>