<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/btPinToScreen"
        android:icon="@drawable/ic_pin"
        android:title="@string/app_bt_pinToScreen"
        android:visible="false" />

    <item
        android:id="@+id/btShowNote"
        android:icon="@drawable/ic_open_window"
        android:title="@string/app_bt_showNote"
        android:visible="false" />

    <item
        android:id="@+id/btShowUsername"
        android:icon="@drawable/ic_open_window"
        android:title="@string/app_bt_showUsername"
        android:visible="false" />

    <item
        android:id="@+id/btShowPassword"
        android:icon="@drawable/ic_open_window"
        android:title="@string/app_bt_showPassword"
        android:visible="false" />

    <item
        android:id="@+id/btCopyNote"
        android:icon="@drawable/ic_copy"
        android:title="@string/app_bt_copyNote"
        android:visible="false" />

    <item
        android:id="@+id/btCopyUsername"
        android:icon="@drawable/ic_copy"
        android:title="@string/app_bt_copyUsername"
        android:visible="false" />

    <item
        android:id="@+id/btCopyPassword"
        android:icon="@drawable/ic_copy"
        android:title="@string/app_bt_copyPassword"
        android:visible="false" />

    <item
        android:id="@+id/btEdit"
        android:icon="@drawable/ic_edit"
        android:title="@string/app_bt_edit" />

    <item
        android:id="@+id/btDelete"
        android:icon="@drawable/ic_delete"
        android:iconTint="@color/actionNegative"
        android:title="@string/app_bt_delete"
        tools:targetApi="o" />
</menu>