<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/ui_ct_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_edittext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioGroup
            android:id="@+id/rbTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rbThemeDefault"
                style="@style/Theme.Passtable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="2dp"
                android:text="@string/ui_ct_systemDefault"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbThemeLight"
                style="@style/Theme.Passtable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="2dp"
                android:text="@string/ui_ct_light"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbThemeDark"
                style="@style/Theme.Passtable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="2dp"
                android:text="@string/ui_ct_dark"
                android:textSize="16sp" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>