<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_settings_item"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swCollectionAllow"
            style="@style/Theme.Passtable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:switchPadding="8dp"
            tools:text="Collection name" />

        <TextView
            android:id="@+id/tvMinimumNumber"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="6dp"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center_vertical"
            android:text="@string/ui_ct_minimumNumber"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/rbSymbolSet"
            app:layout_constraintEnd_toStartOf="@+id/etMinimumNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swCollectionAllow" />

        <com.ladsers.passtable.android.widgets.EditTextParam
            android:id="@+id/etMinimumNumber"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:ems="10"
            android:fontFamily="@font/manrope_bold"
            android:gravity="center|center_horizontal"
            android:inputType="number"
            android:maxLength="2"
            android:padding="0dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/selector_mainbutton"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swCollectionAllow"
            tools:text="2" />

        <RadioGroup
            android:id="@+id/rbSymbolSet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etMinimumNumber"
            tools:visibility="visible">

            <RadioButton
                android:id="@+id/rbBasicSet"
                style="@style/Theme.Passtable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="2dp"
                android:paddingEnd="0dp"
                android:text="@string/ui_ct_basicSet"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbFullSet"
                style="@style/Theme.Passtable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="2dp"
                android:paddingEnd="0dp"
                android:text="@string/ui_ct_fullSet"
                android:textSize="16sp" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>